--- a/cadastro/package.json
+++ b/cadastro/package.json
@@ -16,15 +16,15 @@
     }
   ],
   "dependencies": {
-    "@angular/common": "~2.1.0",
-    "@angular/compiler": "~2.1.0",
-    "@angular/core": "~2.1.0",
-    "@angular/forms": "~2.1.0",
-    "@angular/http": "~2.1.0",
-    "@angular/platform-browser": "~2.1.0",
-    "@angular/platform-browser-dynamic": "~2.1.0",
-    "@angular/router": "~3.1.0",
-    "@angular/upgrade": "~2.1.0",
+    "@angular/common": "~5.0.0",
+    "@angular/compiler": "~5.0.0",
+    "@angular/core": "~5.0.0",
+    "@angular/forms": "~5.0.0",
+    "@angular/http": "~5.0.0",
+    "@angular/platform-browser": "~5.0.0",
+    "@angular/platform-browser-dynamic": "~5.0.0",
+    "@angular/router": "~5.0.0",
+    "@angular/upgrade": "~5.0.0",
     "angular-in-memory-web-api": "^0.1.5",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
@@ -34,6 +34,8 @@
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
+    "@angular/cli": "^1.5.4",
+    "@angular/compiler-cli": "^5.0.3",
     "concurrently": "^3.0.0",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.3",
